--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     background-image: url(cat.svg);
     position: relative;
     height: 300px;
-    border-radius: 10px;
+    border-radius: 10%;
     border: 2px white solid;
     background-repeat: no-repeat;
     background-size: 600px 350px;
