--- a/style.css
+++ b/style.css
@@ -126,10 +126,11 @@ h3{
 a{
     background-color: black;
     padding: 10px;
+    
     text-decoration: none;
     color: white;
     border-radius: 10px;
-    margin-left: 30px;
+    margin-left: 50px;
     font-size: 14px;
     
 }
@@ -140,7 +141,7 @@ a:hover{
 }
 
 .footer{
-    padding: 20px
+    padding: 20px 0 30px 20px;
 }
 
 h6{
